--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="intro-webpage">
       <img src="images/nyt-logo.svg" alt="nyt-logo">
-      <h1>Choose a section:</h1>
+      <p>Choose a section:</p>
       <select class="dropdown-section">
       </select>
     </header>
