Add API for fetching news description and url

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       </select>
     </header>
 
+    <body>
+      <div class="news-content">
+        <div class="news-image"></div>
+        <div class="news-header"></div>
+      </div>
+    </body>
+
     <footer>
       <p>&#169; Copyright 2016 INSTANEWS</p>
     </footer>
