jQuery for news fetch

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
     </header>
 
     <body>
-      <div class="news-content">
-        <div class="news-image"></div>
-        <div class="news-header"></div>
-      </div>
+      <ul class="news-content">
+      </ul>
     </body>
 
     <footer>
