Create first image and general styling when fetching

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     </header>
 
     <body>
-      <ul class="news-content">
-      </ul>
+      <section>
+        <ul class="news-content">
+        </ul>
+      </section>
     </body>
 
     <footer>
