Add preload media for Ajax requests

--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
     <title>Instanews</title>
   </head>
 
+  <header class="intro-webpage">
+    <img class="nyt-logo" src="images/nyt-logo.svg" alt="nyt-logo">
+    <p>Choose a section:</p>
+    <select class="dropdown-section">
+    </select>
+    <div class="preload"><img src="/images/ajax-loader.gif"></div>
+  </header>
+
   <body>
+    <section>
+      <ul class="news-content">
+      </ul>
+    </section>
+  </body>
 
-    <header class="intro-webpage">
-      <img src="images/nyt-logo.svg" alt="nyt-logo">
-      <p>Choose a section:</p>
-      <select class="dropdown-section">
-      </select>
-    </header>
+  <footer>
+    <p>&#169; Copyright 2016 INSTANEWS</p>
+  </footer>
 
-    <body>
-      <section>
-        <ul class="news-content">
-        </ul>
-      </section>
-    </body>
-
-    <footer>
-      <p>&#169; Copyright 2016 INSTANEWS</p>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="JS/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="JS/main.js"></script>
   </body>
 </html>
