Add grid for mobile and tablet mode

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
   <header class="intro-webpage">
     <img class="nyt-logo" src="images/nyt-logo.svg" alt="nyt-logo">
-    <p>Choose a section:</p>
-    <select class="dropdown-section">
-    </select>
+    <div>
+      <p>Choose a section:</p>
+      <select class="dropdown-section">
+      </select>
+    </div>
     <div class="preload"><img src="/images/ajax-loader.gif"></div>
   </header>
 
@@ -28,6 +30,6 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="JS/main.js"></script>
+  <script src="build/js/main.min.js"></script>
   </body>
 </html>
