Implement Google Fonts and desktop style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="intro-webpage">
     <img class="nyt-logo" src="images/nyt-logo.svg" alt="nyt-logo">
-    <div>
+    <div class="selector">
       <p>Choose a section:</p>
       <select class="dropdown-section">
       </select>
