Add news fetching and header resizing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Instanews</title>
   </head>
 
-  <header class="intro-webpage">
-    <img class="nyt-logo" src="images/nyt-logo.svg" alt="nyt-logo">
+  <header id="intro" class="intro-webpage default-size">
+    <img class="nyt-logo logo-size" src="images/nyt-logo.svg" alt="nyt-logo">
     <div class="selector">
       <p>Choose a section:</p>
       <select class="dropdown-section">
