--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <select class="dropdown-section">
       </select>
     </div>
-    <div class="preload"><img src="/images/ajax-loader.gif"></div>
+    <div class="preload"><img src="images/ajax-loader.gif"></div>
   </header>
 
   <body>
