add alt to an image tag and delete closing body tag in index.html file.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <select class="dropdown-section">
       </select>
     </div>
-    <div class="preload"><img src="images/ajax-loader.gif"></div>
+    <div class="preload"><img src="images/ajax-loader.gif" alt ="Loading gif"></div>
   </header>
 
   <body>
@@ -31,5 +31,5 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="build/js/main.min.js"></script>
-  </body>
+  
 </html>
